--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,5 @@
-<!--
-<div class="jumbotron text-center">
-  <h1 class="display-3">{{title}}</h1>
-  <p class="lead">Add riddles to your collection</p>
-  <a href="/riddles/add" class="btn btn-dark btn-lg">Add Riddles</a>
-</div>
--->
-
-       {{> _heroText}}
+<!-- Index Section -->
+{{> _heroText}}
         <section role="section" class="features js--section-features" id="categories">
           <div class="row">
             <h2>Curiosity cures boredom.</h2>
@@ -21,7 +14,8 @@
               <i class="icon ion-md-cog icon-big box"></i>
               <h3>Riddles</h3>
               </div>
-              <p>Collection of Hard, Easy and Brain Teasing Riddles</p>
+              <p>Your own collection of Hard, Easy and Brain Teasing Riddles</p>
+                <p>*** Explore by signing up. ***</p>
             </div>
 
             <div class="col span-1-of-3 categories">
@@ -29,7 +23,8 @@
               <i class="icon ion-md-cube icon-big box"></i>
               <h3>Games</h3>
               </div>
-              <p>Collection of Fun, Logic and Classic Games</p>
+              <p>Your own collection of Fun, Logic and Classic Games</p>
+              <p>*** For Future Releases ***</p>
             </div>
 
             <div class="col span-1-of-3 categories">
@@ -37,7 +32,8 @@
               <i class="icon ion-md-cut icon-big box"></i>
               <h3>Crafts</h3>
               </div>
-              <p>Collection of Quick and Easy DIY Crafts</p>
+              <p>Your own collection of Quick and Easy DIY Crafts</p>
+              <p>*** For Future Releases ***</p>
             </div>
 
           </div>
@@ -58,7 +54,7 @@
                 </div>
                 <div class="works-step">
                   <div>2</div>
-                  <p>Select from one of the categories.</p>
+                  <p>Select from one of the categories. Add, delete/update categories.</p>
                 </div>
                 <div class="works-step">
                   <div>3</div>
