--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,26 +1,4 @@
-
-<!--
-<section class="login js--section-login"
-  <div class="row">
-    <div class="card card-body">
-      <img class="miniLogo" src="/img/logoBoldMyStyle.png">
-      <h3 class="text-center">Account Login</h3>
-      <form action="/users/login" method="post">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" name="email" class="form-control" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" name="password" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-  </div>
-</section>
--->
-
+<!-- Login Section -->
      <section id="login-page">
           <div class="row login-box" id="login">
             <i class="icon ion-md-person avatarLogo"></i>
